--- a/VehicleSpeedControl/Views/Shared/_Layout.cshtml
+++ b/VehicleSpeedControl/Views/Shared/_Layout.cshtml
@@ -5,18 +5,25 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/modernizer")
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                @*<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                </button>*@
+                <nav>
+                    <ul class="menu">
+                        <li>@Html.ActionLink("Ввод данных в систему", "CreateRecordRequest", "DataInput")</li>
+                        <li>@Html.ActionLink("Просмотреть записи в БД", "Index", "DataInput")</li>
+                        <li>@Html.ActionLink("Запрос на превышение скорости по дате", "SpeedThresholdRequest", "DataInput")</li>
+                        <li>@Html.ActionLink("Запрос максимальной и минимальной скорости за указанную дату", "MinAndMaxByDateRequest", "DataInput")</li>
+                    </ul>
+                </nav>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -30,7 +37,6 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
     </div>
 
